<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="heading">My Nanodegree Apps!</string>
    <string name="spotifyStreamer">SPOTIFY STREAMER</string>
    <string name="scoresApp">SCORES APP</string>
    <string name="libraryApp">LIBRARY APP</string>
    <string name="buildItBigger">BUILD IT BIGGER</string>
    <string name="xYZReader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="spotifyStreamerToast">This button will launch Spotify Streamer App!</string>
    <string name="scoresAppToast">This button will launch Scores App!</string>
    <string name="libraryAppToast">This button will launch Library App!</string>
    <string name="buildItBiggerToast">This button will launch Build It Bigger App!</string>
    <string name="xYZReaderToast">This button will launch XYZ Reader App!</string>
    <string name="capstoneToast">This button will launch my capstone app!</string>
</resources>
